[gd_scene load_steps=2 format=3 uid="uid://djtyl6p4efkha"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_i5rf1"]

[node name="menu" type="Node"]
script = ExtResource("1_i5rf1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -324.0
offset_right = -162.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 320

[node name="Control" type="Control" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/Control"]
layout_mode = 2
offset_right = 284.0
offset_bottom = 488.0
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="Control/PanelContainer/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(284, 52)
layout_mode = 2
text = "Play"

[node name="Leaderboard" type="Button" parent="Control/PanelContainer/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(284, 52)
layout_mode = 2
text = "Leaderboard"

[node name="Login" type="Button" parent="Control/PanelContainer/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(284, 52)
layout_mode = 2
text = "Login"

[node name="Exit" type="Button" parent="Control/PanelContainer/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(284, 52)
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Control/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Control/VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Control/VBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/Control/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
